@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Russian ~~ Русский 
-alexalsp
-https://apocalypse.moy.su
+thanks to alexalsp ~ https://apocalypse.moy.su
+for some of the translations
 -->
+
 <language>
    <page id="8888888" voice="no">
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
